// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders as "link" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: transparent;
}

.c0:hover:not(:disabled) {
  background: #EAEBFA;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`<Button /> renders as "secondary" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`<Button /> renders disabled 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
>
  Secondary
</button>
`;

exports[`<Button /> renders loading as "primary" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
>
  <div
    style="width: 20px; height: 20px;"
  >
    <svg
      height="260"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 260 260"
      width="260"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="__lottie_element_2"
        >
          <rect
            height="260"
            width="260"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_4"
        >
          <path
            d="M0,0 L300,0 L300,300 L0,300z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_2)"
      >
        <g
          clip-path="url(#__lottie_element_4)"
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,-17,-23)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(0,-1,1,0,-8,302)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,147,155)"
            >
              <path
                d=" M90.5,0 C90.5,1.909000039100647 90.44100189208984,3.803999900817871 90.3239974975586,5.684000015258789"
                fill-opacity="0"
                stroke="rgb(255,255,255)"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
                stroke-opacity="1"
                stroke-width="32"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
   
    
  Loading
</button>
`;

exports[`<Button /> renders loading as "secondary" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
>
  <div
    style="width: 20px; height: 20px;"
  >
    <svg
      height="260"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 260 260"
      width="260"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="__lottie_element_20"
        >
          <rect
            height="260"
            width="260"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_22"
        >
          <path
            d="M0,0 L300,0 L300,300 L0,300z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_20)"
      >
        <g
          clip-path="url(#__lottie_element_22)"
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,-17,-23)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(0,-1,1,0,-8,302)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,147,155)"
            >
              <path
                d=" M90.5,0 C90.5,1.909000039100647 90.44100189208984,3.803999900817871 90.3239974975586,5.684000015258789"
                fill-opacity="0"
                stroke="rgb(0,217,197)"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
                stroke-opacity="1"
                stroke-width="32"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
   
    
  Waiting
</button>
`;

exports[`<Button /> renders loading as "secondary" 2`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
>
  <div
    style="width: 20px; height: 20px;"
  >
    <svg
      height="260"
      preserveAspectRatio="xMidYMid slice"
      style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
      viewBox="0 0 260 260"
      width="260"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="__lottie_element_38"
        >
          <rect
            height="260"
            width="260"
            x="0"
            y="0"
          />
        </clippath>
        <clippath
          id="__lottie_element_40"
        >
          <path
            d="M0,0 L300,0 L300,300 L0,300z"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#__lottie_element_38)"
      >
        <g
          clip-path="url(#__lottie_element_40)"
          opacity="1"
          style="display: block;"
          transform="matrix(1,0,0,1,-17,-23)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(0,-1,1,0,-8,302)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,147,155)"
            >
              <path
                d=" M90.5,0 C90.5,1.909000039100647 90.44100189208984,3.803999900817871 90.3239974975586,5.684000015258789"
                fill-opacity="0"
                stroke="rgb(0,217,197)"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
                stroke-opacity="1"
                stroke-width="32"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
          <g
            style="display: none;"
          >
            <g>
              <path
                fill-opacity="0"
                stroke-linecap="round"
                stroke-linejoin="miter"
                stroke-miterlimit="10"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
   
    
  Waiting
</button>
`;

exports[`<Button /> renders wide 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`<Button /> renders with no a11y violations 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
>
  Primary
</button>
`;
